Přidán Search Engine kód pro Google

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <meta name="google-site-verification" content="9IsjH-8M8DB-H2RI3qPJZYATcEXEJfS8mGwwoRhUBFA" />
+
     <meta name="description" content="Free Image Hosting - Upload your images for free and share them with your friends.">
     <meta name="keywords" content="free, image, hosting, upload, share, images">
     <meta name="author" content="František Špaček, Lukáš Podolský">
