Zvětšena šířka containeru

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description"
         content="Free Image Hosting - Upload your images for free and share them with your friends.">
     <meta name="keywords" content="free, image, hosting, upload, share, images">
-    <meta name="author" content="František Špaček, Lukáš Podolský">
+    <meta name="author" content="MaisnerStefan">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
