--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <meta name="google-site-verification" content="9IsjH-8M8DB-H2RI3qPJZYATcEXEJfS8mGwwoRhUBFA" />
-
     <meta name="description"
         content="Free Image Hosting - Upload your images for free and share them with your friends.">
     <meta name="keywords" content="free, image, hosting, upload, share, images">
     <meta name="author" content="MaisnerStefan">
-
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
     <title>Free Image Hosting</title>
-
 </head>
 
 <body>
 
-    <button id="toggleDark" class="dark-mode-btn"><i class="fas fa-moon"></i> Dark Mode</button>
+    <div class="header-actions">
+        <button id="loginButton" class="login-button"><i class="fas fa-sign-in-alt"></i> Log In</button>
+        <button id="darkModeToggle" class="dark-mode-button"><i class="fas fa-moon"></i> Dark Mode</button>
+    </div>
 
-    <div class="container">
-
-        <h1><span class="underline">Free</span> Image Hosting</h1>
+    <div class="main-content">
+        <h1><span class="highlight-underline">Free</span> Image Hosting</h1>
         <p>Upload your images for free and share them with your friends.</p>
 
-        <form id="uploadForm" action="upload.php" method="post" enctype="multipart/form-data">
-            <label for="file" class="upload-area">
+        <form id="imageUploadForm" action="/upload_image" method="post" enctype="multipart/form-data">
+            <label for="file" class="drop-zone">
                 <i class="fas fa-cloud-upload-alt"></i>
                 <span>Drag & Drop or Click to Select a File</span>
             </label>
@@ -41,28 +38,75 @@
         </form>
     </div>
 
-    <script>
-        const darkBtn = document.getElementById('toggleDark');
+    <div id="loginPopup" class="popup">
+        <div class="popup-content">
+            <span class="popup-close">&times;</span>
 
-        // Tohle je kód, který checkne v LocalStorage, jestli je tam uložený darkMode (Kdyby si nevěděl Lukáši)
+            <div id="loginSection">
+                <h2>Login</h2>
+                <form>
+                    <input type="text" placeholder="Username" required>
+                    <input type="password" placeholder="Password" required>
+                    <button type="submit">Log In</button>
+                </form>
+                <p>Don't have an account? <a href="#" id="registerLink">Register</a></p>
+            </div>
+
+            <div id="registerSection" style="display: none;">
+                <h2>Register</h2>
+                <form>
+                    <input type="text" placeholder="Username" required>
+                    <input type="email" placeholder="Email" required>
+                    <input type="password" placeholder="Password" required>
+                    <button type="submit">Register</button>
+                </form>
+                <p>Already have an account? <a href="#" id="loginLink">Log In</a></p>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        const darkModeToggle = document.getElementById('darkModeToggle');
+        const loginButton = document.getElementById('loginButton');
+        const loginPopup = document.getElementById('loginPopup');
+        const popupClose = document.querySelector('.popup-close');
+        const registerLink = document.getElementById('registerLink');
+        const loginLink = document.getElementById('loginLink');
+        const loginSection = document.getElementById('loginSection');
+        const registerSection = document.getElementById('registerSection');
+
         if (localStorage.getItem('darkMode') === 'enabled') {
             document.body.classList.add('dark');
-            darkBtn.innerHTML = '<i class="fas fa-sun"></i> Light Mode';
+            darkModeToggle.innerHTML = '<i class="fas fa-sun"></i> Light Mode';
         }
 
-        darkBtn.addEventListener('click', () => {
+        darkModeToggle.addEventListener('click', () => {
             document.body.classList.toggle('dark');
-
             if (document.body.classList.contains('dark')) {
                 localStorage.setItem('darkMode', 'enabled');
-                darkBtn.innerHTML = '<i class="fas fa-sun"></i> Light Mode';
+                darkModeToggle.innerHTML = '<i class="fas fa-sun"></i> Light Mode';
             } else {
                 localStorage.setItem('darkMode', 'disabled');
-                darkBtn.innerHTML = '<i class="fas fa-moon"></i> Dark Mode';
+                darkModeToggle.innerHTML = '<i class="fas fa-moon"></i> Dark Mode';
             }
         });
-    </script>
 
+        loginButton.addEventListener('click', () => loginPopup.style.display = 'block');
+        popupClose.addEventListener('click', () => loginPopup.style.display = 'none');
+        window.addEventListener('click', (e) => { if (e.target === loginPopup) loginPopup.style.display = 'none'; });
+
+        registerLink.addEventListener('click', (e) => {
+            e.preventDefault();
+            loginSection.style.display = 'none';
+            registerSection.style.display = 'block';
+        });
+
+        loginLink.addEventListener('click', (e) => {
+            e.preventDefault();
+            registerSection.style.display = 'none';
+            loginSection.style.display = 'block';
+        });
+    </script>
 
 </body>
 
